# bert_create_pretraining

./: Cargo.toml  LICENSE  README.md
src/: main.rs  training.rs
