[package]
name = "bert_create_pretraining"
version = "0.1.1"
edition = "2021"
authors = ["Yiğit Bekir Kaya <kayayig@itu.edu.tr>"]
description = "This crate is a Rust port of Google's BERT create pretraining data."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bert_tokenizer = "0.1.3"
clap = { version = "4.1.4", features = ["derive"] }
unicode-normalization = "0.1.22"
unicode_categories = "0.1.1"
tfrecord = { version = "0.14.0", features = ["with-serde", "async"] }
serde = "1.0.152"
anyhow = "1.0.69"
rand = "0.8.5"
rand_chacha = "0.3.1"